added another paragraph

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h1> RUN BUDDY </h1>
     <h2> this is 2nd🏃 level heading</h2>
     what to do
+    <p> This is the paragraph i am adding to page to practicing commiting</p>
 </body>
 
 </html>
