html outline and gitignore

--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 </head>
 
 <body>
+<div>
+    <div>
     <h1> RUN BUDDY </h1>
+    </div>
     <h2> this is 2nd🏃 level heading</h2>
     what to do
     <p> This is the paragraph i am adding to page to practicing commiting</p>
+</div>
 </body>
 
 </html>
